--- a/packages/sdk/public/index.html
+++ b/packages/sdk/public/index.html
@@ -11,6 +11,7 @@
 
 		<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.34/dist/web3.min.js"></script>
 		<script src="js/bundle.js"></script>
+		<script src="js/portis.js"></script>
 		<script>
 			const enslogin = require('/lib/enslogin.js');
 
@@ -37,6 +38,5 @@
 			// .catch(e => console.error("ERROR:", e));
 
 		</script>
-		<div id="app"></div>
 	</body>
 </html>
