WIP provider issue

--- a/packages/sdk/public/index.html
+++ b/packages/sdk/public/index.html
@@ -18,7 +18,7 @@
 				provider:
 				{
 					appId:   null,
-					network: 'goerli',
+					network: 'ropsten',
 					anchor:  null,
 				},
 				ipfs:
