--- a/packages/minimal/public/index.html
+++ b/packages/minimal/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-		<title>iExec Doracle Lottery</title>
+		<title>ENSLogin - Demo wallet</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
